# EmbodiedAI-Core

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  Dockerfile  LICENSE  MANIFEST.in  PROJECT_REPORT.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: default.yaml
docs/: api_reference.md  installation.md  quickstart.md
examples/: 01_vision_basic.py  02_robot_control_basic.py  03_motion_planning.py
src/: __init__.py
src/control/: __init__.py  robot_config.py  robot_controller.py
src/motion/: __init__.py  motion_planner.py  trajectory_generator.py
src/vision/: __init__.py  image_processor.py  vision_system.py
tests/: test_control.py  test_motion.py  test_vision.py
